# snakemake-wasm-app

./: .gitignore  CONTRIBUTING.md  README.md  Snakefile  index.html  index.html.br  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: build.yml
_app/: version.json  version.json.br
_app/immutable/assets/: 0.BHSb5DPn.css  0.BHSb5DPn.css.br  0.BiJX3sFZ.css  0.BiJX3sFZ.css.br  0.CnFTxRAb.css  0.CnFTxRAb.css.br  0.DGu9G7oI.css  0.DGu9G7oI.css.br  0.DXioA3tF.css  0.DXioA3tF.css.br  0.DlNHibSE.css  0.DlNHibSE.css.br  0.g3pjLU4t.css  0.g3pjLU4t.css.br  0.tOnMfnsI.css  0.tOnMfnsI.css.br  2.cu7PyWYt.css  2.cu7PyWYt.css.br  favicon.D2R1y4nF.svg.br  favicon.DDXTHe_8.svg.br  snakemake-logo.HBV1Z5vL.svg.br
_app/immutable/chunks/: 2eTemRil.js  2eTemRil.js.br  9fQhPhOO.js  9fQhPhOO.js.br  AMlWRyJP.js  (+213 more)
pyodide/: console-v2.html.br  console.html.br  package.json.br  pyodide-lock.json.br  pyodide.asm.js.br  pyodide.asm.wasm.br  pyodide.js.br  pyodide.mjs.br
snakemake-executor-plugin-wasm/: pyproject.toml
snakemake-executor-plugin-wasm/.github/workflows/: ci.yml  release-please.yml
snakemake-executor-plugin-wasm/src/snakemake_executor_plugin_wasm/: __init__.py
snakemake-executor-plugin-wasm/tests/: test_async_executor.py  test_plugin.py
src/: app.html
src/routes/: +layout.svelte  +page.svelte  layout.css
static/: Snakefile
static/wheels/: immutables-0.21-cp313-cp313-pyodide_2025_0_wasm32.whl  snakemake_executor_plugin_wasm-0.1.0-py3-none-any.whl
wheels/: connection_pool-0.0.3-py3-none-any.whl  psutil-7.2.2-py3-none-any.whl
(+132 files in other folders)
